export const snapshot = {};

snapshot[`parseStatements: someFunction(); someOtherFunction(" aa() ; bbb()") 1`] = `
[
  {
    args: [
    ],
    name: "someFunction",
    type: "call",
  },
  {
    args: [
      {
        type: "string",
        value: " aa() ; bbb()",
      },
    ],
    name: "someOtherFunction",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someFunction();
someOtherFunction(" aa() ; bbb()") 1`] = `
[
  {
    args: [
    ],
    name: "someFunction",
    type: "call",
  },
  {
    args: [
      {
        type: "string",
        value: " aa() ; bbb()",
      },
    ],
    name: "someOtherFunction",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall() 1`] = `
[
  {
    args: [
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(
123,
true
) 1`] = `
[
  {
    args: [
      {
        type: "number",
        value: 123,
      },
      {
        type: "boolean",
        value: true,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements:    someCall()

  1`] = `
[
  {
    args: [
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall('a', 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall('a \\'ha\\'', 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a 'ha'",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a\`, 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a \\\`ha\\\`\`, 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a \`ha\`",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a", 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a \\"ha\\"", 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: 'a "ha"',
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a", 111,true) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: true,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a", 111, false) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: false,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a false true 123 b", 111, false) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a false true 123 b",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: false,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(-123) 1`] = `
[
  {
    args: [
      {
        type: "number",
        value: -123,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: some_call() 1`] = `
[
  {
    args: [
    ],
    name: "some_call",
    type: "call",
  },
]
`;

snapshot[`parseStatements: some-call() 1`] = `
[
  {
    args: [
    ],
    name: "some-call",
    type: "call",
  },
]
`;

snapshot[`parseStatements: SOMECALL() 1`] = `
[
  {
    args: [
    ],
    name: "SOMECALL",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("hi" + ("there" + ("is" + "nesting"))) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "hi",
          },
          {
            args: [
              {
                type: "string",
                value: "there",
              },
              {
                args: [
                  {
                    type: "string",
                    value: "is",
                  },
                  {
                    type: "string",
                    value: "nesting",
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "__+__",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("a string " + concated("STRING + blah" + (b() + c()) + "\$")) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "a string ",
          },
          {
            args: [
              {
                args: [
                  {
                    args: [
                      {
                        type: "string",
                        value: "STRING + blah",
                      },
                      {
                        args: [
                          {
                            args: [
                            ],
                            name: "b",
                            type: "call",
                          },
                          {
                            args: [
                            ],
                            name: "c",
                            type: "call",
                          },
                        ],
                        name: "__+__",
                        type: "call",
                      },
                    ],
                    name: "__+__",
                    type: "call",
                  },
                  {
                    type: "string",
                    value: "\$",
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "concated",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: 123123 1`] = `
[
  {
    type: "number",
    value: 123123,
  },
]
`;

snapshot[`parseStatements: "hi there" 1`] = `
[
  {
    type: "string",
    value: "hi there",
  },
]
`;

snapshot[`parseStatements: true; 123123; 'hi there' 1`] = `
[
  {
    type: "boolean",
    value: true,
  },
  {
    type: "number",
    value: 123123,
  },
  {
    type: "string",
    value: "hi there",
  },
]
`;

snapshot[`parseStatements: assign = "123" 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "assign",
      },
      {
        type: "string",
        value: "123",
      },
    ],
    name: "__=__",
    type: "call",
  },
]
`;

snapshot[`parseStatements: var a = someCall(123 + 44, "abc") 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        args: [
          {
            args: [
              {
                type: "number",
                value: 123,
              },
              {
                type: "number",
                value: 44,
              },
            ],
            name: "__+__",
            type: "call",
          },
          {
            type: "string",
            value: "abc",
          },
        ],
        name: "someCall",
        type: "call",
      },
    ],
    name: "__=__",
    type: "call",
  },
]
`;

snapshot[`parseStatements: let a_aaa = someCall(123 + 44, "abc") 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a_aaa",
      },
      {
        args: [
          {
            args: [
              {
                type: "number",
                value: 123,
              },
              {
                type: "number",
                value: 44,
              },
            ],
            name: "__+__",
            type: "call",
          },
          {
            type: "string",
            value: "abc",
          },
        ],
        name: "someCall",
        type: "call",
      },
    ],
    name: "__=__",
    type: "call",
  },
]
`;

snapshot[`parseStatements: const a_aaa = someCall(123 + 44, "abc") 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a_aaa",
      },
      {
        args: [
          {
            args: [
              {
                type: "number",
                value: 123,
              },
              {
                type: "number",
                value: 44,
              },
            ],
            name: "__+__",
            type: "call",
          },
          {
            type: "string",
            value: "abc",
          },
        ],
        name: "someCall",
        type: "call",
      },
    ],
    name: "__=__",
    type: "call",
  },
]
`;

snapshot[`parseStatements: const a_aaa = someCall(123 + 44, "abc"); a_aaa + 123 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a_aaa",
      },
      {
        args: [
          {
            args: [
              {
                type: "number",
                value: 123,
              },
              {
                type: "number",
                value: 44,
              },
            ],
            name: "__+__",
            type: "call",
          },
          {
            type: "string",
            value: "abc",
          },
        ],
        name: "someCall",
        type: "call",
      },
    ],
    name: "__=__",
    type: "call",
  },
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "a_aaa",
          },
        ],
        name: "\$ref",
        type: "call",
      },
      {
        type: "number",
        value: 123,
      },
    ],
    name: "__+__",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`\${\`\`}\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`\${someCall(\`\${123}\`)}\`) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "",
          },
          {
            args: [
              {
                args: [
                  {
                    type: "string",
                    value: "",
                  },
                  {
                    type: "number",
                    value: 123,
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "someCall",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`\${someCall(\`\${'abc{}' + "}{}def" + \`g\`}\`)}\`) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "",
          },
          {
            args: [
              {
                args: [
                  {
                    type: "string",
                    value: "",
                  },
                  {
                    args: [
                      {
                        args: [
                          {
                            type: "string",
                            value: "abc{}",
                          },
                          {
                            type: "string",
                            value: "}{}def",
                          },
                        ],
                        name: "__+__",
                        type: "call",
                      },
                      {
                        type: "string",
                        value: "g",
                      },
                    ],
                    name: "__+__",
                    type: "call",
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "someCall",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string \\\${not_interpolated()}\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a string \${not_interpolated()}",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string \${interpolated()}\`) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "a string ",
          },
          {
            args: [
            ],
            name: "interpolated",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string \${"interpolated"}\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a string interpolated",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string \${\`interpolated\`}\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a string interpolated",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string \${\`interpolated\` + \`\${"hard"}\`}\`) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "a string ",
          },
          {
            args: [
              {
                type: "string",
                value: "interpolated",
              },
              {
                type: "string",
                value: "hard",
              },
            ],
            name: "__+__",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string 123 \${interpolate(\`{}\`)} hello\`) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            args: [
              {
                type: "string",
                value: "a string 123 ",
              },
              {
                args: [
                  {
                    type: "string",
                    value: "{}",
                  },
                ],
                name: "interpolate",
                type: "call",
              },
            ],
            name: "__+__",
            type: "call",
          },
          {
            type: "string",
            value: " hello",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a string 123 \${\`hello\`    } hello\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a string 123 hello hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(\`a \\\`string 123 \${\`he\\\`llo\`}\`) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a \`string 123 he\`llo",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: assign =  1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseStatements: malformed("a" 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseStatements: someCall(-123.500) 1`] = `
[
  {
    args: [
      {
        type: "number",
        value: -123.5,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall("hi" + ("there" + (("is + "bad" + "nesting"))) 1`] = `'{"index":36,"rowBegin":1,"columnBegin":37,"rowEnd":1,"columnEnd":40}: Unable to consume token: bad'`;

snapshot[`parseStatements: someCall(true, a(b(), 123), "hello") 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            args: [
            ],
            name: "b",
            type: "call",
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(true, a(b(), 123), "hello",) 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            args: [
            ],
            name: "b",
            type: "call",
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(true, a((), 123), "hello",) 1`] = `'{"index":18,"rowBegin":1,"columnBegin":19,"rowEnd":1,"columnEnd":20}: Unable to consume token: )'`;

snapshot[`parseStatements: someCall(true, a(true, 123), "hello",) 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            type: "boolean",
            value: true,
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseStatements: someCall(true, a(true(), 123), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseStatements: someCall(true, a(true(), 123()), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseStatements: someCall(true, a(true(), 123()), "hello"(),) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseStatements: testing blah 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":13}: Unable to consume token: blah'`;

snapshot[`parseStatements: empty string 1`] = `
[
]
`;
